--- a/www/index.html
+++ b/www/index.html
@@ -23,10 +23,15 @@
     <p id="screenTitle">Medicine Scheduler</p>
   </div>
   
-  
+  <div id="testDiv">Test</div>
 
-<script>
-
+<script type = "text/JavaScript">
+    //alert("test");
+    var testDiv = document.getElementById('testDiv');
+    testDiv.html= "newTest";
+    
+    
+    $("#testDiv").click(function(){alert("taetsfer");});
 </script>
 </body>
 </html>
