--- a/www/index.html
+++ b/www/index.html
@@ -7,6 +7,7 @@
 <head>
   <meta charset="utf-8">
    <link rel="stylesheet" href="style.css"></link>
+   <script type="text/javascript" src="js/Calendar.js"></script>
   <title>Index</title>
 
 </head>
@@ -19,19 +20,14 @@
       <hr>
       <hr>
       </a>
+        <img id="HomeLogo" src="img/HomeLogo.tif" alt="Home Logo" height="35px" width="45px">
     </div>
+
     <p id="screenTitle">Medicine Scheduler</p>
   </div>
   
   <div id="testDiv">Test</div>
 
-<script type = "text/JavaScript">
-    //alert("test");
-    var testDiv = document.getElementById('testDiv');
-    testDiv.html= "newTest";
-    
-    
-    $("#testDiv").click(function(){alert("taetsfer");});
-</script>
+
 </body>
 </html>
