--- a/www/menu.html
+++ b/www/menu.html
@@ -17,9 +17,11 @@
     <hr>
     <br>
     
-    <a href="newMed.html">Add a Medication</a><br><br>
-    <a href="changeMed.html">Change a Medication</a><br><br>
-    <a href="cancelMed.html">Cancel a Medication</a><br><br>
+    <a href="newMed.html"><img src="img/addButton.png" alt="Home Logo" height="19px" width="24px">
+Add a Medication</a><br><br>
+    <a href="changeMed.html"><img src="img/changeButton.png" alt="Home Logo" height="19px" width="24px"> Change a Medication</a><br><br>
+    <a href="cancelMed.html"><img src="img/CancelButton.tif" alt="Home Logo" height="19px" width="24px"> Cancel a Medication</a><br><br>
+    <a href="index.html">Home</a><br><br>
    <!-- <table>
       <tr>
         <a href="newMed">
@@ -34,7 +36,7 @@
       </tr>
     </table>
     -->
-    <br><br><br>
+    <br>
     <p>SETTINGS</P>
     <hr>
   </div>
